Fixed text overflow at store details limits box.

--- a/static/manage/css/store_details.1.5.css
+++ b/static/manage/css/store_details.1.5.css
@@ -17,7 +17,7 @@ div#limits-box
 
 div.limit-details {
 	float: left;
-	width: 160px;
+	min-width: 160px;
 	height: 50px;
 	padding: 10px;
 	color: #ABABAB;
@@ -67,8 +67,8 @@ div.limit-details div.description div.count {
 	font-size: 30px;
 	font-weight: bold;
 	float: left;
-	width: 50px;
 	height: 40px;
+	padding-right: 10px;
 	line-height: 40px;
 }
 
